plugins {
    id 'application'
    id 'java'
    id 'io.freefair.lombok' version '8.14'
    id "org.sonarqube" version "6.3.1.5724"
}

sonar {
  properties {
    property "sonar.projectKey", "karpfenprofessor_uvl_merger"
    property "sonar.organization", "karpfenprofessor"
    property "sonar.token", "f2469fb76d2c8b4002290a92a23295cf318f26e3"
    property "sonar.exclusions", "src/main/java/testcases/**"
    property "sonar.coverage.exclusions", "**/*"
  }
}
repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1' 
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    
    implementation platform('org.apache.logging.log4j:log4j-bom:2.25.0')
    implementation 'org.apache.logging.log4j:log4j-api'
    implementation 'org.apache.logging.log4j:log4j-core'
 
    implementation 'com.google.guava:guava:33.4.8-jre'

    implementation 'org.choco-solver:choco-solver:4.10.18'
    implementation 'io.github.universal-variability-language:uvl-parser:0.3'
}

test {
    useJUnitPlatform()
    testLogging {
        events "started", "passed", "skipped", "failed"
        showExceptions true
        showCauses true
        showStackTraces true
        exceptionFormat "full"
        
        // Enable this to see test output in console
        showStandardStreams = false
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named('clean') {
    delete file('logs')
}

tasks.named('build') {
    dependsOn clean
}